small fix for tickets on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -864,7 +864,7 @@ footer a:visited {
     /* Tickets */ 
 
     .ticketWrapper {
-        margin: 50px 50px 0px;
+        margin: 50px 50px 130px;
     }
     .productTicket {
         height: 200px;
